--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
 :root {
-    --cor-primaria: #000;
-    --cor-secundaria: #f6f6f6;
-    --cor-terciaria: #22d4f2;
-    --fonte-primaria: 'Montserrat', sans-serif;
-    --fonte-secundaria: 'Krona One', sans-serif;
-}
+    --cor-primaria: #000000;
+    --cor-secundaria: #F6F6F6;
+    --cor-terciaria: #22D4FD;
+    --cor-hover: #272727;
 
+    --fonte-primaria: 'Krona One', sans-serif;
+    --fonte-secundaria: 'Montserrat', sans-serif;
+}
 *{
     margin: 0;
     padding: 0;
@@ -15,39 +16,31 @@
 
 body{
     box-sizing: border-box;
-    background-color: var(--cor-primaria); /*Cor primaria */
-    color: var(--cor-secundaria); /*Cor secundaria */
-}
-
-.titulo-destaque{
-    color: #22d422;
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 
 .cabecalho{
     padding: 2% 0% 0% 15%;
 }
-
 .cabecalho__menu{
     display: flex;
     gap: 80px;
 }
-
 .cabecalho__menu__link{
-    font-family: var(--fonte-primaria); /*fonte primaria */
+    font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 600;
-    color: var(--cor-terciaria); /*Cor terciaria */
+    color: var(--cor-terciaria);
     text-decoration: none;
 }
-
 .apresentacao{
-    padding: 10% 15%;
+    padding: 5% 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 82px;
 }
-
 .apresentacao__conteudo{
     width: 50%;
     display: flex;
@@ -57,12 +50,14 @@ body{
 
 .apresentacao__conteudo__titulo{
     font-size: 2.25rem;
-    font-family: var(--fonte-secundaria); /*fonte secundaria */
+    font-family: var(--fonte-primaria);
 }
-
+.titulo-destaque{
+    color: var(--cor-terciaria);
+}
 .apresentacao__conteudo__texto{
     font-size: 1.5rem;
-    font-family: var(--fonte-primaria); /*fonte primaria */
+    font-family: var(--fonte-secundaria);
 }
 
 .apresentacao__links{
@@ -72,18 +67,16 @@ body{
     align-items: center;
     gap: 32px;
 }
-
 .apresentacao__links__subtitulo{
-    font-family: var(--fonte-secundaria); /*fonte secundaria */
+    font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
-
 .apresentacao__links__navegacao{
     display: flex;
     justify-content: center;
     gap: 16px;
-    border: 2px solid #224df2;
+    border: 2px solid var(--cor-terciaria);
     width: 50%;
     text-align: center;
     border-radius: 8px;
@@ -91,29 +84,37 @@ body{
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: var(--cor-secundaria); /*Cor secundaria */
-    font-family: var(--fonte-primaria); /*fonte primaria */
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
 }
-
-.apresentacao__links__link:hover {
-     background-color: var(--cor-primaria); /*cor primaria*/
+.apresentacao__links__navegacao:hover{
+    background-color: var(--cor-hover);
 }
-
 .apresentacao__imagem{
     width: 50%;
 }
-
 .rodape{
+    color: var(--cor-primaria);
+    background-color: var(--cor-terciaria);
     padding: 24px;
-    color: var(--cor-primaria); /*Cor primaria */
-    background-color: var(--cor-terciaria);  /*Cor terciaria */
-    font-family: var(--fonte-primaria); /*fonte primaria */
+    text-align: center;
+    font-family: var(--fonte-secundaria);
     font-size: 1.5rem;
     font-weight: 400;
-    text-align: center;
 }
-@media(max-width: 1200px) {
+
+@media (max-width: 1200px) {
+    .cabecalho{
+         padding: 10%;  
+    }
+    .cabecalho__menu{
+        justify-content: center;
+    }
     .apresentacao{
         flex-direction: column-reverse;
+        padding: 5%;
+    }
+    .apresentacao__conteudo{
+        width: auto;
     }
 }
